fixed scrolling issue on pokedex on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -62,7 +62,7 @@
 .wrapper {
   display: flex;
   flex-direction: row;
-  overflow: hidden;
+  overflow: scroll;
   width: 100vw;
 }
 
@@ -82,6 +82,7 @@
   border: 3px solid #A040A0; 
   white-space:nowrap;
   text-align: center;
+  
 }
 
 .item {
